--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,3 +85,11 @@ span {
   font-size: 19px;
 }
 
+.current-state {
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  margin-top: 8vh;
+  z-index: 2;
+}
+
