--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div #dataContainer
      id="dataContainer"
      *ngIf="airPurifierState.PM25"
-     (click)="getAirData(airPurifierState.LightMode, airPurifierState.Speed)"
+     (click)="getAirData(undefined, undefined)"
      class="card-header data-container">
   <h3 style="text-shadow: 0 0 1px white;z-index: 2; color: white">
     {{ title }}
@@ -35,10 +35,7 @@
   </div>
   <div class="current-state">
     <div>
-      Fan speed: {{airPurifierState.FanPower}} rpm
-    </div>
-    <div>
-      Light mode: {{getLightMode()}}
+      Fan speed: {{+airPurifierState.FanPower}} rpm
     </div>
   </div>
   <div class="header"
@@ -56,32 +53,65 @@
     </div>
   </div>
 </div>
-<div class="controls">
-  <div class="lightMode" (click)="modeListOpen = !modeListOpen">
-    {{airPurifierState ? getLightModeName(airPurifierState.LightMode) : ''}}
+<div style="width:100%">
+  <div class="controls"
+       (click)="modeListOpen = !modeListOpen">
+    <div class="lightMode">
+      {{airPurifierState ? getLightModeName(airPurifierState.LightMode) : ''}}
+    </div>
+    <div *ngIf="!modeListOpen">
+      <svg class="bi bi-caret-down-fill arrow" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+           xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 01.753 1.659l-4.796 5.48a1 1 0 01-1.506 0z"/>
+      </svg>
+    </div>
+    <div *ngIf="modeListOpen">
+      <svg class="bi bi-caret-up-fill arrow" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+           xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M7.247 4.86l-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 00.753-1.659l-4.796-5.48a1 1 0 00-1.506 0z"/>
+      </svg>
+    </div>
   </div>
-  <div *ngIf="modeListOpen">
-    <div *ngFor="let lightMode of lightModesList"
-         (click)="onSelectMode($event)">
-      <input type="radio"
-             name="lightModeRadio"
-             (change)="onChange($event)"
-             [checked]="checkedMode(lightMode)"
-             [value]="lightMode">
+
+  <div class="lightMode"
+       style="max-height: 16vh; overflow: auto;"
+       *ngIf="modeListOpen">
+    <div class="controls"
+         *ngFor="let lightMode of lightModesList; let i = index"
+         (click)="onSelectMode(i)">
       {{lightMode.name}}
     </div>
   </div>
 </div>
+<div *ngIf="changeSpeedEnable()">
+  <app-slider [minValue]="0"
+              [maxValue]="1040"
+              [value]="airPurifierState.FanPower"
+              (valueEmitter)="setSpeed($event)"
+              [index]="'Fan speed'"
+              [unit]="'RPM'">
+  </app-slider>
+</div>
 <div class="buttons">
-  <div>
-
+  <div class="button">
+    <img src="../assets/3.ico" alt="" class="ico1">
+    <div class="button-text" style="margin-top: -9px">control</div>
   </div>
-  <div>
-
+  <div class="button">
+    <img src="../assets/2.ico" alt="" class="ico">
+    <div class="button-text">graph</div>
   </div>
-  <div>
-
+  <div class="button">
+    <img src="../assets/4.ico" alt="" class="ico">
+    <div class="button-text">about</div>
   </div>
+</div>
+<div *ngIf="spinner" class="spinner-border text-secondary"
+     style="position: absolute; top: 49%; left: 49%"
+     role="status">
+  <span class="sr-only">Loading...</span>
 </div>
 
 
