--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -103,7 +103,7 @@ span {
 
 .current-state {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   color: white;
   margin-top: 3vh;
   z-index: 2;
@@ -111,10 +111,71 @@ span {
 
 .controls {
   width: 100%;
-  height: 36vh;
+  background-color: white;
+  line-height: 45px;
+  height: 45px;
 }
 
 .lightMode {
+  //padding: 8px;
+  font-size: 18px;
+  font-weight: 500;
+  border-bottom: 1px solid lightgray;
+  //margin: 8px;
+  opacity: 1;
+  //border-radius: 4px;
+  text-align: center;
+  height: auto;
+  transition: height 1s;
+  color: gray;
+  background-color: white;
+}
+
+.radio-item {
+  padding: 8px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: fixed;
+  top: 86.5vh;
+  left: 0px;
   width: 100%;
+  height: 14vh;
+  z-index: 3;
+  background-color: white;
+}
+
+.button {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  max-height: 7vh;
+}
+
+.button-text {
+  font-size: 14px;
+}
+
+.ico {
+   width: 3vh;
+   height: 3vh;
+  opacity: 0.5;
+ }
+.ico1 {
+  width: 4vh;
+  height: 5vh;
+  margin-top: -3px;
+}
+
+.arrow {
+  position: relative;
+  top: -48px;
+  left: 90%;
+  opacity: 0.6;
 }
 
